--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 </head>
 <body>
     <div id="btn-group" class="btn-group"></div>
+    <div>
+        <button id="favorite-btn" class="favorite-btn">Favorite Gifs</button>
+        <p style="margin: 0 30px 10px">(Double click the gif that you want to add to the favorite gifs.)</p>
+    </div>
+    
     <div class="display-flex">
         <div id="gif-group" class="initial-width"></div>
         <div id="input" class="form-group">
